# stateset-api

./: .dockerignore  .editorconfig  .gitignore  10_OUT_OF_10_ROADMAP.md  ADVANCED_CACHING_README.md  AGENTIC_CHECKOUT_IMPLEMENTATION.md  AGENTIC_COMMERCE_IMPROVEMENTS.md  AGENTIC_OPS_PITCH.md  AGENTIC_OPS_STABLEPAY_PLATFORM.md  AGENTS.md  API_IMPROVEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_SUMMARY.md  Dockerfile  ENV_VARIABLES.md  EXECUTIVE_SUMMARY.md  IMPROVEMENTS.md  IMPROVEMENTS_COMPLETED.md  IMPROVEMENTS_SUMMARY.md  JOURNEY_TO_10.md  LICENSE  MANUFACTURING_ROADMAP.md  Makefile  NEURAL_COMMERCE_ROADMAP.md  README.md  README_PLATFORM.md  README_SETUP.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v1.0.0.md  ROADMAP.md  SECURITY.md  STABLEPAY.md  STABLEPAY_CRYPTO_SUMMARY.md  STABLEPAY_QUICKSTART.md  START_HERE.md  STATESET_REVIEW.md  (+17 more)
.cargo/: config.toml
.cargo-target/: .rustc_info.json
.github/: pull_request_template.md
agentic_server/: CREATE_RELEASE.md  Cargo.toml  DEMO_RESULTS.md  Dockerfile  README.md  RELEASE_NOTES.md  demo_test.sh  docker-compose.yml  nginx.conf  prepare_release.sh  prometheus.yml  test_e2e.sh  test_security.sh
agentic_server/benches/: performance.rs
agentic_server/src/: auth.rs  cache.rs  config.rs  constants.rs  delegated_payment.rs  errors.rs  events.rs  fraud_service.rs  idempotency.rs  main.rs  metrics.rs  models.rs  product_catalog.rs  rate_limit.rs  recovery_service.rs  redis_store.rs  return_service.rs  security.rs  service.rs  shopify_integration.rs  stripe_integration.rs  stripe_integration_enhanced.rs  tax_service.rs  tax_service_enhanced.rs  validation.rs  webhook_service.rs
agentic_server/src/neural/: chat.rs  cognitive.rs  mod.rs  openai.rs  qdrant.rs  semantic_search.rs
agentic_server/src/neural/agents/: fraud_agent.rs  inventory_agent.rs  mod.rs  pricing_agent.rs  recovery_agent.rs  return_agent.rs
agentic_server/tests/: integration_tests.rs  unit_tests.rs
agentic_server/tests/common/: mod.rs
benches/: api_benchmarks.rs
config/: default.toml  docker.toml
demos/: API_TEST_SUMMARY.md  README.md  agents_concierge_demo.sh  basic_api_test.sh  customer_lifecycle_flow.sh  demo_1_robot_build.sh  demo_2_quality_issue.sh  demo_3_production_dashboard.sh  demo_4_production_scheduling.sh  demo_5_batch_production.sh  demo_6_supply_chain_integration.sh  ecommerce_checkout_flow.sh  inventory_management_flow.sh  minimal_server_demo.sh  order_creation_demo.sh  order_to_shipment_flow.sh  purchase_order_flow.sh  requests.http  returns_processing_flow.sh  shipment_creation_demo.sh  shipment_tracking_flow.sh  stablepay_crypto_demo.sh  stablepay_demo.sh  warranty_claim_flow.sh
docker/: entrypoint.sh
docs/: API_IMPROVEMENTS_2025.md  API_OVERVIEW.md  API_OVERVIEW_root.md  API_RELEASE_PROCESS.md  API_VERSIONING.md  ARCHITECTURE.md  BEST_PRACTICES.md  BUSINESS_QUICK_REFERENCE.md  CLEANUP_PLAN.md  COMMANDS_STATUS.md  DATABASE.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  FAQ.md  GETTING_STARTED.md  GETTING_STARTED_BUSINESS.md  INTEGRATION_GUIDE.md  MARKET_OVERVIEW.md  MONITORING.md  PERFORMANCE_TUNING.md  PLATFORM_COMPARISON.md  PRODUCTION_READY_REPORT.md  QUICK_START.md  README.md  RELEASE_NOTES.md  SECURITY_GUIDE.md  TROUBLESHOOTING.md  USE_CASES.md  api_operations_overview.md  manufacturing-api-guide.md
examples/: ADVANCED_WORKFLOWS.md  DOCKER_DEVELOPMENT.md  MANUFACTURING_EXAMPLES.md  README.md  StateSet-API.postman_collection.json  WEBHOOK_HANDLERS.md  advanced_caching_demo.rs  api-examples.md  curl-examples.sh  docker-compose.dev.yml  go-example.go  javascript-example.js  manufacturing-client.py  manufacturing-client.ts  php-example.php  python-example.py  react-nextjs-integration.tsx  ruby-example.rb  typescript-example.ts
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_json_parsing.rs  fuzz_sanitize.rs  fuzz_validation.rs
migrations/: 20240101000000_create_commerce_tables.sql  20240101000002_add_commerce_checkout_customer.sql  20240101000003_create_orders_table.sql  20240101000004_create_inventory_items_table.sql  20240101000005_create_returns_table.sql  20240101000006_create_item_master_and_inventory_balances.sql  20240101000007_create_payments_table.sql  20240101000008_create_outbox_table.sql  20240101000009_create_stablepay_tables.sql  20240101000010_add_stablecoin_support.sql  20240101000011_create_robot_manufacturing_system.sql  20240101000012_create_inventory_reservations_table.sql  20240101000013_create_inventory_transactions_table.sql  20240101000014_add_safety_stock_and_reorder_points.sql  20240101000015_create_inventory_lots_table.sql  20240101000016_create_inventory_optimization_views.sql  20240101000017_add_inventory_indexes_and_version.sql  Cargo.toml
openapi/: README.md  stateset-api.v1.json
proto/: asn.proto  billofmaterials.proto  common.proto  customer.proto  inventory.proto  order.proto  packaging.proto  payment.proto  picking.proto  product.proto  purchase_order.proto  return.proto  shipment.proto  supplier.proto  transfer.proto  warehouse.proto  warranty.proto  work_order.proto
scripts/: create_order.sh  dev_admin_token.py
simple_api/: Cargo.toml
simple_api/src/: main.rs
src/: api.rs  auth.rs  circuit_breaker.rs  common.rs  config.rs  db.rs  errors.rs  grpc.rs  lib.rs  main.rs  message_queue.rs  migrator.rs  schema.rs
standalone-test/: Cargo.toml
tests/: agentic_commerce_flow_test.rs  auth_integration_test.rs  bom_service_test.rs  cart_integration_test.rs  cart_service_test.rs  checkout_flow_test.rs  comprehensive_api_test.rs  integration_customer_test.rs  integration_orders_test.rs  integration_tests.rs  inventory_adjustment_test.rs  inventory_api_test.rs  inventory_concurrency_test.rs  inventory_order_integration_test.rs  load_test.rs  manufacturing_service_test.rs  order_lifecycle_test.rs  payment_integration_test.rs  procurement_idempotency_test.rs  property_tests.rs  rbac_permission_test.rs  relationship_smoke_test.rs  return_workflow_test.rs  security_test.rs  stablepay_service_test.rs  work_order_lifecycle_integration_test.rs
(+688 files in other folders)
