[package]
name = "stateset-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migrations", "standalone-test"]

[dependencies]
async-graphql = "4.0"
async-trait = "0.1.81"
tokio = { version = "1.34.0", features = ["full"] }
axum = "0.7.1"
axum-macros = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.30", features = ["serde"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
juniper = "0.15"
juniper_actix = "0.6"
jsonwebtoken = "8.0"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dsl_auto_type = "0.1.2"
prost = "0.11"
redis = "0.21.5"
lazy_static = "1.4"
lru = "0.7.8"
tonic = "0.8"
tonic-web = "0.5"
validator = { version = "0.14", features = ["derive"] }
thiserror = "1.0"
uuid = { version = "1.4", features = ["fast-rng", "v4", "serde"] }
sea-orm = { version = "1.0.0", features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres", "debug-print", "with-chrono", "with-uuid", "with-rust_decimal", "with-time"] }
sea-orm-migration = "1.0.0"
anyhow = "1.0"
futures = "0.3"
prometheus = { version = "0.13", features = ["push"] }
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_info"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres", "uuid", "chrono", "time", "json"] }
migrations = { path = "migrations" }

[build-dependencies]
tonic-build = "0.8"

[[bin]]
name = "stateset-api"
path = "src/main.rs"

[[bin]]
name = "simple-server"
path = "src/bin/simple_server.rs"
