[package]
name = "stateset-api"
version = "1.0.0"
edition = "2021"
autobins = false

[workspace]
members = [".", "migrations", "simple_api", "src/bin/only_standalone"]

[dependencies]
async-trait = "0.1.83"
tokio = { version = "1.42.0", features = ["full"] }
axum = "0.7.9"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "trace", "cors", "timeout", "compression-full"] }
jsonwebtoken = "8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.13"
prost-types = "0.13"
# Temporarily disabled due to TLS issues
redis = { version = "0.21.7", features = ["aio", "tokio-comp", "connection-manager"], default-features = false }
lazy_static = "1.5"
tonic = "0.13"
tonic-web = "0.13"
validator = { version = "0.14", features = ["derive"] }
thiserror = "1.0"
uuid = { version = "1.4", features = ["fast-rng", "v4", "serde"] }
sea-orm = { version = "1.0.0", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "debug-print", "with-chrono", "with-uuid", "with-rust_decimal", "with-time"] }
sea-orm-migration = { version = "1.0.0", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls"] }
anyhow = "1.0"
# Temporarily disabled due to TLS issues
prometheus = { version = "0.13" }
strum = { version = "0.26", features = ["derive"] }
http = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
migrations = { path = "migrations" }
# OpenAPI documentation
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid", "decimal"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
dashmap = "5.5"
config = "0.13"
rust_decimal_macros = "1.30"

# Required by modules in the repo
base64 = "0.22"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
bytes = "1"
http-body-util = "0.1"
futures = "0.3"
bigdecimal = { version = "0.3", features = ["serde"] }
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_info"] }
slog-async = "2.7"
slog-term = "2.9"
metrics = "0.21"
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
opentelemetry-stdout = { version = "0.3", features = ["trace"] }
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic"] }
tracing-opentelemetry = "0.22"
pin-project-lite = "0.2"
hyper = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls"] }
once_cell = "1.19"
regex = "1.10"
async-recursion = "1.0"
argon2 = { version = "0.5", features = ["std"] }
clap = { version = "4.5.4", features = ["derive"] }

# OAuth2 support
oauth2 = "4.4"
url = "2.5"

[features]
default = []
demos = []
returns-commands = []
full-suite = []
mock-tests = []

[build-dependencies]
tonic-build = "0.13"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
# Property-based testing
proptest = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"
# Mock testing
mockall = "0.12"
wiremock = "0.6"
# Test utilities
fake = { version = "2.9", features = ["derive"] }
rstest = "0.18"
test-case = "3.3"
assert_matches = "1.5"

[[bin]]
name = "stateset-api"
path = "src/main.rs"

[[bin]]
name = "simple-server"
path = "src/bin/simple_server.rs"

[[bin]]
name = "minimal-server"
path = "src/bin/minimal_server.rs"

[[bin]]
name = "grpc-server"
path = "src/bin/grpc_server.rs"

[[bin]]
name = "build-logger"
path = "src/bin/build_logger.rs"

[[bin]]
name = "minimal-api"
path = "src/bin/minimal_api.rs"

[[bin]]
name = "orders-bench"
path = "src/bin/orders_bench.rs"
required-features = ["demos"]

[[bin]]
name = "orders-mock-server"
path = "src/bin/orders_mock_server.rs"

[[bin]]
name = "migration"
path = "src/bin/migration.rs"

[[bin]]
name = "openapi-export"
path = "src/bin/openapi_export.rs"

[[bin]]
name = "stateset-cli"
path = "src/bin/stateset_cli.rs"

[[bin]]
name = "seed-data"
path = "src/bin/seed_data.rs"

[[bench]]
name = "api_benchmarks"
harness = false
