[package]
name = "agentic-commerce-server"
version = "0.1.0"
edition = "2021"

# Empty workspace to make this a standalone package
[workspace]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full", "sync", "rt-multi-thread"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "compression-full", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }

# Async
async-trait = "0.1"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Redis client (for cache)
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP
http = "1.0"

[dev-dependencies] 