[package]
name = "agentic-commerce-server"
version = "0.4.0"
edition = "2021"

# Empty workspace to make this a standalone package
[workspace]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full", "sync", "rt-multi-thread"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "compression-full", "trace", "limit"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Rate limiting
governor = "0.6"

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Redis client (for cache and sessions)
redis = { version = "0.26", features = ["tokio-comp", "connection-manager", "aio"] }

# Error handling
thiserror = "1.0"

# HTTP
http = "1.0"

# Security
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Stripe integration
stripe-rust = { version = "0.32", package = "async-stripe", features = ["runtime-tokio-hyper"] }
reqwest = { version = "0.12", features = ["json"] }
qdrant-client = "1.10"
async-openai = "0.23"
anyhow = "1.0"

[dev-dependencies]
# Testing
tokio-test = "0.4"
hyper = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

# Property-based testing
proptest = "1.4"
quickcheck = "1.0"

# Test utilities
assert_matches = "1.5"
rstest = "0.18"

[[bench]]
name = "performance"
harness = false 
