[package]
name = "stateset-api-fuzz"
version = "0.0.0"
authors = ["StateSet Team"]
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.stateset-api]
path = ".."

[[bin]]
name = "fuzz_json_parsing"
path = "fuzz_targets/fuzz_json_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_sanitize"
path = "fuzz_targets/fuzz_sanitize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_validation"
path = "fuzz_targets/fuzz_validation.rs"
test = false
doc = false
bench = false
